kube/init.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: cert-manager
  labels:
    cert-manager.io/disable-validation: "true"
