kube/rndir-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rndir
  namespace: rndir
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "rndir.cc"
    secretName: cert-rndir-wildcard
  rules:
  - host: rndir.cc
    http:
      paths:
      - path: /
        backend:
          serviceName: site
          servicePort: 80
